--- a/blueprints/profiles/templates/admin.html
+++ b/blueprints/profiles/templates/admin.html
@@ -8,7 +8,7 @@
     </style>
     <title>Привет мир!</title>
   </head>
-    <body class="h-100">
+    <body class="h-100 bg-primary" >
 <div class='cover-container w-100 d-flex px-0 flex-column '>
     <header class="mb-5">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-auto">
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse " id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto ">
                         <li class="nav-item active ">
-                            <a class="nav-link " href="{{ url_for('profile.user') }}">Главная <span
+                            <a class="nav-link " href="/">Главная <span
                                     class="sr-only"></span></a>
                         </li>
                         <li class="nav-item active mr-1">
@@ -33,7 +33,7 @@
                                     class="sr-only"></span></a>
                         </li>
                         <li class="nav-item active mr-1 ">
-                            <a class="nav-link " href="{{ url_for('') }}">Выйти <span
+                            <a class="nav-link " href="{{ url_for('auth_page.logout') }}">Выйти <span
                                     class="sr-only"></span></a>
                         </li>
 
@@ -47,7 +47,7 @@
         <div class="py-5 text-center">
             <h1>Начните играть !</h1>
             <p class="lead"> Чтобы приступить к игре вам нужно получить приглашение в лобби от админа</p>
-            <button class="btn btn-outline-light btn-lg mt-5 px-5" ><a href = {{"url_for(board.add_board)"}}></a></button>
+            <a class="btn btn-outline-light btn-lg mt-5 px-5" href="{{ url_for('board.add_board') }}"> Создать игру</a>
         </div>
     </main>
 
