--- a/blueprints/templates/board_list.html
+++ b/blueprints/templates/board_list.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 {% for board in boards %}
-<div>board.id, {{ board.n }}</div>
+<div>board.id, {{ board.id }}</div>
 {% endfor %}
 </body>
 </html>
