--- a/blueprints/templates/add_prize.html
+++ b/blueprints/templates/add_prize.html
@@ -1,16 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<form action="" method="post" name="simple" enctype="multipart/form-data">
-    {{ form.hidden_tag() }}
-    {{ form.name() }}
-    {{ form.description() }}
-    {{ form.avatar() }}
-    {{ form.submit() }}
-</form>
-</body>
-</html>
+{% extends "base_admin.html"%}
+{%block main_content%}
+<div class="row d-flex justify-content-center align-items-center h-100">
+    <div class="col-12 col-md-8 col-lg-7 col-sm-7 bg-dark " style="border-radius: 1rem;">
+        <div class="card bg-dark text-white" >
+            <h1 class="text-center text-white mb-3 mb-lg-5" >Добавьте приз</h1>
+            <form action="" method="post" name="simple" enctype="multipart/form-data" class="text-center mx-lg-5 mx-4">
+                {{ form.hidden_tag() }}
+                <div class="form-outline form-white mb-4">
+                    {{form.name.label(class = "form-label")}}
+                    {{ form.name(class = "form-control form-control-lg") }}
+                </div>
+                <div class="form-outline form-white mb-4">
+                    {{form.description.label(class = "form-label")}}
+                    {{ form.description(class = "form-control form-control-lg") }}
+                </div>
+                <div class="form-outline form-white mb-4">
+                    {{form.avatar.label(class = "form-label")}}
+                    {{ form.avatar(class = "form-control form-control-lg") }}
+                </div>
+                    {{ form.submit(class = "btn btn-outline-light btn-lg-4 btn-lg mt-5 px-5") }}
+
+
+
+        </form>
+        </div>
+
+    </div>
+
+</div>
+{%endblock%}
