--- a/blueprints/templates/base_admin.html
+++ b/blueprints/templates/base_admin.html
@@ -30,7 +30,7 @@
                             <a class="nav-link " href="">Профиль <span class="sr-only"></span></a>
                         </li>
                         <li class="nav-item active mr-1">
-                            <a class="nav-link " href="">Редактировать призы <span class="sr-only"></span></a>
+                            <a class="nav-link " href="{{url_for('admin.add_prize')}}">Редактировать призы <span class="sr-only"></span></a>
                         </li>
                         <li class="nav-item active mr-1">
                             <a class="nav-link " href="">Спсиок game rooms <span class="sr-only"></span></a>
