--- a/blueprints/templates/index.html
+++ b/blueprints/templates/index.html
@@ -1,45 +1,54 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <style>
-        @import '/static/css/bootstrap.min.css';
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
 
+    <title>Cover Template for Bootstrap</title>
 
-    </style>
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/cover/">
+
+    <!-- Bootstrap core CSS -->
+    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="cover.css" rel="stylesheet">
 </head>
-<body class="d-flex h-100 text-center text-bg-dark">
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+<style>
+        @import '/static/css/bootstrap.min.css';
+</style>
+
+<body class="text-center bg-dark text-white">
+<div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
     <header class="mb-auto">
         <div>
-            <h3 class="float-md-start mb-0">Cover</h3>
-            <nav class="nav nav-masthead justify-content-center float-md-end">
+            <h3 class="float-md-start mb-0">Sea Battle</h3>
+            <nav class="navbar navbar-light ">
                 <div class="container-fluid">
-                    <a href="{{ url_for('auth_page.login') }}">login</a>
-                    <a href="{{ url_for('auth_page.register') }}">register</a>
+                    <a class="nav-link active" href="{{ url_for('auth_page.login') }}">login</a>
+                    <a class="nav-link" href="{{ url_for('auth_page.register') }}">register</a>
                     {% if current_user.is_authenticated %}
-                    <a href="{{ url_for('profile.user') }}">{{ current_user.login }}</a>
+                    <a class="nav-link" href="{{ url_for('profile.user') }}">{{ current_user.login }}</a>
                     {% endif %}
                 </div>
             </nav>
         </div>
     </header>
 
-    <main class="px-3">
-        <h1>Cover your page.</h1>
+    <main role="main" class="inner cover mt-5">
+        <h1 class="cover-heading">Cover your page.</h1>
         <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the
             text, and add your own fullscreen background photo to make it your own.</p>
         <p class="lead">
-            <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white">Learn more</a>
+            <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
         </p>
     </main>
-
-    <footer class="mt-auto text-white-50">
-        <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a
-                href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
-    </footer>
 </div>
+</body>
+</html>
 <!--<body>-->
 <!--<a href="{{ url_for('auth_page.login') }}">login</a>-->
 <!--<a href="{{ url_for('auth_page.register') }}">register</a>-->
@@ -47,4 +56,3 @@
 <!--<a href="{{ url_for('profile.user') }}">{{ current_user.login }}</a>-->
 <!--{% endif %}-->
 <!--</body>-->
-</html>
