--- a/blueprints/templates/add_prize.html
+++ b/blueprints/templates/add_prize.html
@@ -4,6 +4,12 @@
     <div class="col-12 col-md-8 col-lg-7 col-sm-7 bg-dark " style="border-radius: 1rem;">
         <div class="card bg-dark text-white" >
             <h1 class="text-center text-white mb-3 mb-lg-5" >Добавьте приз</h1>
+               {% if form.errors%}
+                    <div class="alert alert-danger" role="alert">
+                        <!--                                    #Обращаемся к ошибкам form(RegisterForm), достаем по ключу ошибки(название колонки) первый элемент-->
+                        {{form.errors['name'][0]}}
+                    </div>
+                {%endif%}
             <form action="" method="post" name="simple" enctype="multipart/form-data" class="text-center mx-lg-5 mx-4">
                 {{ form.hidden_tag() }}
                 <div class="form-outline form-white mb-4">
