--- a/blueprints/templates/user.html
+++ b/blueprints/templates/user.html
@@ -3,6 +3,7 @@
 {%block main_content%}
     <div class="py-5 text-center">
         <h1>Начните играть !</h1>
+        {%if boards%}
         <p class="lead mb-5"> Чтобы приступить к игре вам нужно получить приглашение в лобби от админа</p>
 
     </div>
