--- a/blueprints/templates/edit_board.html
+++ b/blueprints/templates/edit_board.html
@@ -80,11 +80,11 @@
                 <table class="table table-bordered border-light;">
                     <tbody>
 
-                    {% for tr in board_render %}
+                    {% for y in range(size) %}
                     <tr style="height: 1rem">
-                        {% for th in tr %}
+                        {% for x in range(size)  %}
                         <th class="text-white p-0" style= "width: 1rem;">
-                            <button style="width: 100%; height: 100%;" value="{{y_position}}{{x_position}}">{{ th }}</button>
+                            <button style="width: 100%; height: 100%;" value="{{x}}{{y}}"  onclick="fillFields()">{{ board_render[y][x]}}</button>
                         </th>
                         {% endfor %}
                     </tr>
