--- a/blueprints/templates/edit_board.html
+++ b/blueprints/templates/edit_board.html
@@ -77,14 +77,22 @@
                     {{ ship_form.submit()}}
                 </form>
                 <div>
-                <table class="table table-bordered border-light;">
+                <table class="table table-bordered border-light ;">
                     <tbody>
-
+                     <thead>
+                        <tr>
+                            <th></th>
+                          {% for i in range(size) %}
+                            <th class="text-white" style= "width: 1rem;">{{i+1}}</th>
+                            {% endfor %}
+                        </tr>
+                      </thead>
                     {% for y in range(size) %}
                     <tr style="height: 1rem">
+                      <th class="text-white" style= "width: 1rem;">{{y}}</th>
                         {% for x in range(size)  %}
                         <th class="text-white p-0" style= "width: 1rem;">
-                            <button style="width: 100%; height: 100%;" value="{{x}}{{y}}"  onclick="fillFields()">{{ board_render[y][x]}}</button>
+                            <button  style="width: 100%; height: 100%;" value="{{x}}{{y}}"  onclick="fillFields()">{{ board_render[y][x]}}</button>
                         </th>
                         {% endfor %}
                     </tr>
