--- a/blueprints/templates/edit_board.html
+++ b/blueprints/templates/edit_board.html
@@ -71,37 +71,48 @@
 
                 <form method="post">
                     {{ ship_form.hidden_tag() }}
-                    {{ ship_form.x(max=(board.n - 1))}}
-                    {{ ship_form.y(max=(board.n - 1))}}
+                    {{ ship_form.x(max=(board.n - 1) , id = "xValue")}}
+                    {{ ship_form.y(max=(board.n - 1) , id = "yValue")}}
                     {{ ship_form.prize() }}
                     {{ ship_form.submit()}}
                 </form>
-                <div>
+                <div class="container">
                 <table class="table table-bordered border-light ;">
                     <tbody>
                      <thead>
-                        <tr>
+                        <tr >
                             <th></th>
                           {% for i in range(size) %}
-                            <th class="text-white" style= "width: 1rem;">{{i+1}}</th>
+                            <th class="text-white" >{{i+1}}</th>
                             {% endfor %}
                         </tr>
                       </thead>
                     {% for y in range(size) %}
-                    <tr style="height: 1rem">
-                      <th class="text-white" style= "width: 1rem;">{{y}}</th>
+                    <tr >
+                      <th class="text-white" >{{y}}</th>
                         {% for x in range(size)  %}
-                        <th class="text-white p-0" style= "width: 1rem;">
-                            <button  style="width: 100%; height: 100%;" value="{{x}}{{y}}"  onclick="fillFields()">{{ board_render[y][x]}}</button>
+                        <th class="text-white p-0" >
+                            <button  style="width: 100%; height: 100%;"  data  onclick="fillFields(this.id)">{{ board_render[y][x]}}</button>
                         </th>
+
                         {% endfor %}
+
                     </tr>
                     {% endfor %}
-                    </tbody>
+                </tbody>
                 </table>
                 </div>
 
             </div>
         </div>
     </div>
+    <script>
+        function a(cid) {
+        var button = document.getElementById(cid);
+        var input_x = document.getElementById("xValue");
+        var input_y = document.getElementById("yValue");
+        input_x.value = button.value
+        button.disabled = true;
+}
+    </script>
     {%endblock%}
